Fix for wrapped children inside sidebar group

--- a/src/components/SidebarComponent/index.scss
+++ b/src/components/SidebarComponent/index.scss
@@ -4,9 +4,7 @@
 
 .sidebar {
     height: 100%;
-    // width: calc(100% - 10rem);
     box-shadow: 2px 0px 4px var(--shadow-primary-color);
-    // border-right: 1px solid var(--text-primary);
     padding: 1rem 0px .5rem 1rem;
     background: var(--background-primary-e1);
     z-index: 10000;
@@ -44,6 +42,11 @@
 
         * {
             width: 110%;
+        }
+
+        a {
+            display: inline;
+            // border: 1px solid red;
         }
 
         .action {
@@ -153,6 +156,14 @@
                 padding: 0px;
                 margin: 0px;
                 opacity: 0;
+                
+                * {
+                    font-size: 0rem;
+                    height: 0px;
+                    padding: 0px;
+                    margin: 0px;
+                    opacity: 0;
+                }
             }
 
             .group-header > *:last-child {
@@ -197,7 +208,7 @@
             padding: 0px;
             margin: 0px;
 
-            & > * {
+            * {
                 width: 100%;
             }
 
